branches/zip: Issue #178 rb://91
Change plug.in to have same CXXFLAGS as CFLAGS. This is to ensure that
both .c and .cc files get compiled with same flags. To fix the issue
where UNIV_LINUX was defined only in .c files.

Approved by: Marko

--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4251
testament3-sha1: bd48cf2919cb18edf1662d914038940be2056305

--- a/plug.in
+++ b/plug.in
@@ -28,17 +28,29 @@ MYSQL_PLUGIN_ACTIONS(innobase,  [
   AC_C_BIGENDIAN
   case "$target_os" in
 	lin*)
-		CFLAGS="$CFLAGS -DUNIV_LINUX";;
+		CFLAGS="$CFLAGS -DUNIV_LINUX"
+		CXXFLAGS="$CXXFLAGS -DUNIV_LINUX"
+		;;
 	hpux10*)
-		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX -DUNIV_HPUX10";;
+		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX -DUNIV_HPUX10"
+		CXXFLAGS="$CXXFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX -DUNIV_HPUX10"
+		;;
 	hp*)
-		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX";;
+		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX"
+		CXXFLAGS="$CXXFLAGS -DUNIV_MUST_NOT_INLINE -DUNIV_HPUX"
+		;;
 	aix*)
-		CFLAGS="$CFLAGS -DUNIV_AIX";;
+		CFLAGS="$CFLAGS -DUNIV_AIX"
+		CXXFLAGS="$CXXFLAGS -DUNIV_AIX"
+		;;
 	irix*|osf*|sysv5uw7*|openbsd*)
-		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE";;
+		CFLAGS="$CFLAGS -DUNIV_MUST_NOT_INLINE"
+		CXXFLAGS="$CXXFLAGS -DUNIV_MUST_NOT_INLINE"
+		;;
 	*solaris*|*SunOS*)
-		CFLAGS="$CFLAGS -DUNIV_SOLARIS";;
+		CFLAGS="$CFLAGS -DUNIV_SOLARIS"
+		CXXFLAGS="$CXXFLAGS -DUNIV_SOLARIS"
+		;;
   esac
   INNODB_DYNAMIC_CFLAGS="-DMYSQL_DYNAMIC_PLUGIN"
   case "$target_cpu" in
