More readability for DTrace commands --BZR-- revision-id: mikael@mysql.com-20090219235625-zzny0c2wyi3lt7uc property-branch-nick: mysql-5.1-performance-version testament3-sha1: c947e5ca98289c689a6921428c7a536a41423826

--- a/storage/archive/Makefile.am
+++ b/storage/archive/Makefile.am
@@ -79,7 +79,7 @@ dtrace_files:
 dtrace_providers:
 	echo $(DTRACEPROVIDER) > $@
 probes_mysql.o: $(DTRACEPROVIDER) $(DTRACEFILES)
-	$(DTRACE) $(DTRACEFLAGS) -G -s $< $(DTRACEFILES) -o $@
+	$(DTRACE) $(DTRACEFLAGS) -G -s $(DTRACEPROVIDER) $(DTRACEFILES) -o $@
 endif
 
 # Don't update the files from bitkeeper
