A workaround to handle the problem with that abs_top_srcdir doesn't work on some automake platforms.
Done by copying the .d files to the build
directories.
--BZR--
revision-id: mikael@mysql.com-20090220221109-6y3x4g7qy9phsn8o
property-branch-nick: mysql-5.1-performance-version
testament3-sha1: 1a32607a35fcc5bf89a977ff49a2e6bc691f1f7c

--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -212,16 +212,19 @@ libndb_la_DEPENDENCIES = dtrace_files dtrace_providers probes_libndb.o
 mysqld_LDADD += probes_all.o
 mysqld_DEPENDENCIES += dtrace_files dtrace_providers probes_all.o
 CLEANFILES += dtrace_files dtrace_providers probes_all.o
-DTRACEPROVIDER = $(top_srcdir)/sql/probes_mysql.d
+DTRACEPROVIDER = ../include/probes_mysql.d
 
 dtrace_files:
 	echo $(DTRACEFILES) > $@
-dtrace_providers:
+dtrace_providers: dtrace_sources
 	echo $(DTRACEPROVIDER) > $@
+dtrace_sources:
+	-$(RM) -f probes_mysql.d
+	$(CP) $(top_srcdir)/include/probes_mysql.d probes_mysql.d
 
 DTRACEDIRS = . ../mysys $(patsubst %,$(top_builddir)/storage/%,@mysql_se_dirs@)
 
-probes_all.o: probes_mysql.d $(DTRACEFILES)
+probes_all.o: probes_mysql.d $(DTRACEFILES) dtrace_sources
 	providers=`(for i in $(DTRACEDIRS); do cat $$i/dtrace_providers 2>/dev/null; done) | tr " " "\n" | sort | uniq | sed -e '/^$$/d' -e 's/^/-s /'`; \
 	objects=`for i in $(DTRACEDIRS); do f=\`cat $$i/dtrace_files 2>/dev/null\`; for j in $$f; do test -f $$i/$$j && echo "$$i/$$j "; done; done`; \
 	$(DTRACE) $(DTRACEFLAGS) -G $$providers $$objects -o $@
