--- a/storage/example/Makefile.am
+++ b/storage/example/Makefile.am
@@ -55,13 +55,18 @@ libexample_a_DEPENDENCIES = probes_mysql.o
 CLEANFILES =
 BUILT_SOURCES =
 DTRACEFILES = libexample_a-ha_example.o
-DTRACEPROVIDER = $(top_srcdir)/sql/probes_mysql.d
+DTRACEPROVIDER = probes_mysql.d
 
 dtrace_files:
 	echo $(DTRACEFILES) > $@
-dtrace_providers:
+dtrace_providers: dtrace_sources
 	echo $(DTRACEPROVIDER) > $@
-probes_mysql.o: $(DTRACEPROVIDER) $(DTRACEFILES)
+dtrace_sources:
+	-$(RM) -f probes_mysql.d
+	$(CP) $(top_srcdir)/include/probes_mysql.d probes_mysql.d
+	echo timestamp > dtrace_sources
+
+probes_mysql.o: $(DTRACEPROVIDER) $(DTRACEFILES) dtrace_sources
 	$(DTRACE) $(DTRACEFLAGS) -G -s $(DTRACEPROVIDER) $(DTRACEFILES) -o $@
 endif
 
