Yet another attempt of getting DTrace builds done properly --BZR-- revision-id: mikael@mysql.com-20090221203246-zjdapk21rb4ybl31 property-branch-nick: mysql-5.1-performance-version testament3-sha1: f0ee2bdc8ed39f2382a9faf9803e1a8c760be636

--- a/storage/archive/Makefile.am
+++ b/storage/archive/Makefile.am
@@ -76,14 +76,14 @@ DTRACEPROVIDER = probes_mysql.d
 
 dtrace_files:
 	echo $(DTRACEFILES) > $@
-dtrace_providers: dtrace_sources
+dtrace_providers: probes_mysql.d
 	echo $(DTRACEPROVIDER) > $@
-dtrace_sources:
+probes_mysql.d:
 	-$(RM) -f probes_mysql.d
 	$(CP) $(top_srcdir)/include/probes_mysql.d probes_mysql.d
 	echo timestamp > dtrace_sources
 
-probes_mysql.o: $(DTRACEPROVIDER) $(DTRACEFILES) dtrace_sources
+probes_mysql.o: $(DTRACEPROVIDER) $(DTRACEFILES)
 	$(DTRACE) $(DTRACEFLAGS) -G -s $(DTRACEPROVIDER) $(DTRACEFILES) -o $@
 endif
 
