Fixed problem with sql directory DTrace Makefile --BZR-- revision-id: mikael@mysql.com-20090221211302-f7rbpmlrhzx1y5uq property-branch-nick: mysql-5.1-performance-version testament3-sha1: fd84f55efe2ac6db327f923eb206410b01c72caf

--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -211,11 +211,11 @@ libndb_la_DEPENDENCIES = dtrace_files dtrace_providers probes_libndb.o
 mysqld_LDADD += probes_all.o
 mysqld_DEPENDENCIES += dtrace_files dtrace_providers probes_all.o
 CLEANFILES += dtrace_files dtrace_providers probes_all.o
-DTRACEPROVIDER = ../include/probes_mysql.d
+DTRACEPROVIDER = probes_mysql.d
 
 dtrace_files:
 	echo $(DTRACEFILES) > $@
-dtrace_providers: dtrace_sources
+dtrace_providers: probes_mysql.d
 	echo $(DTRACEPROVIDER) > $@
 probes_mysql.d:
 	-$(RM) -f probes_mysql.d
