Corrected Dependency for DTrace --BZR-- revision-id: mikael@mysql.com-20090227110417-m1lyw1demkmx2my1 property-branch-nick: mysql-5.1-performance-version testament3-sha1: d7f49208a83ded30803c7e2215e888bf9173b22a

--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -46,7 +46,7 @@ DTRACEFILES =           filesort.o \
                         sql_update.o
 
 DTRACEFILES_DEPEND =    filesort.o \
-			.libs/libndb_la-ha_ndbcluster.lo \
+			libndb_la-ha_ndbcluster.lo \
                         handler.o \
                         mysqld.o \
                         net_serv.o \
