Ensured that we apply DTrace script on both object files potentially produced by libtool --BZR-- revision-id: mikael@mysql.com-20090306122225-9y3awmgzu7vn5nwe property-branch-nick: 5.1-perf testament3-sha1: 7df9e93342ad901b5fff0f483ff53d70532c2c29

--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -248,7 +248,13 @@ probes_all.o: probes_mysql.d $(DTRACEFILES_DEPEND)
 # Can't depend directly on .libs/*.o, because there is no generated rule for
 # that in the Makefile; it is a byproduct of *.lo
 probes_libndb.o: probes_mysql.d libndb_la-ha_ndbcluster.lo
-	$(DTRACE) $(DTRACEFLAGS) -G -s probes_mysql.d .libs/libndb_la-ha_ndbcluster.o -o $@
+	if test -f .libs/libndb_la-ha_ndbcluster.o ; then
+		$(DTRACE) $(DTRACEFLAGS) -G -s probes_mysql.d .libs/libndb_la-ha_ndbcluster.o -o $@
+	endif
+	if test -f libndb_la-ha_ndbcluster.o ; then
+		$(DTRACE) $(DTRACEFLAGS) -G -s probes_mysql.d libndb_la-ha_ndbcluster.o -o $@
+	endif
+
 endif
 
 # Don't update the files from bitkeeper
