Fix silly mistakes --BZR-- revision-id: mikael@mysql.com-20090306231236-wvf2qq596zgswwpb property-branch-nick: mysql-5.1-perf-windows testament3-sha1: ebdc49cae8c46dae28599c0af3d54bb5a35ce2e8

--- a/storage/innobase/CMakeLists.txt
+++ b/storage/innobase/CMakeLists.txt
@@ -32,11 +32,11 @@ IF (NOT WITHOUT_ATOMICS)
     TRY_RUN(RUN_RES COMPILE_RES ${CMAKE_BINARY_DIR}
             ${CMAKE_SOURCE_DIR}/storage/innobase/win_atomics64_test.c)
     IF (RUN_RES)
-      ADD_DEFINTIONS(-DWIN_ATOMICS64)
+      ADD_DEFINITIONS(-DWIN_ATOMICS64)
     ENDIF (RUN_RES)
   ELSE (CMAKE_SIZEOF_VOID_P MATCHES 8)
 # Check for 32 bit atomics
-    TRY_RUN(run_res compile_res ${CMAKE_BINARY_DIR}
+    TRY_RUN(RUN_RES COMPILE_RES ${CMAKE_BINARY_DIR}
             ${CMAKE_SOURCE_DIR}/storage/innobase/win_atomics32_test.c)
     IF (RUN_RES)
       ADD_DEFINITIONS(-DWIN_ATOMICS32)
