Fixing some issues in the build when using DTrace probes
Probe definition file is now a separate file that is copied during
build to the correct location, this enforces dependency requirements
correctly and allows builds to work when using the current or separate
build directories

--BZR--
revision-id: mc.brown@sun.com-20090318100415-vircn9ueutf4n71z
property-branch-nick: mysql-5.1-ext-performance-version
testament3-sha1: bd8316c42baeeba0bd0ba21937cf6190b6af555a

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -72,7 +72,7 @@ dist-hook:
 
 probes_mysql.d:
 	if ! test -f probes_mysql.d ; then \
-		$(CP) -f $(top_srcdir)/include/probes_mysql.d probes_mysql.d; \
+		$(CP) -f $(top_srcdir)/include/probes_mysql.d.base probes_mysql.d; \
 	fi
 
 DTRACEPROVIDER = probes_mysql.d
