Copy include/config.h to include/my_config.h at configure-time.  Also, continue to update it at make-time.
One shouldn't need to run "make" on server source to get the stuff we say
plugins should use.

--BZR--
revision-id: chad@mysql.com-20090319133730-nd8b2r7df652mz2a
property-branch-nick: 5.1-bugteam--antonyplugin
testament3-sha1: 568efb1c33374e8c50cd31d9ba103c6445b03b90

--- a/configure.in
+++ b/configure.in
@@ -2815,6 +2815,7 @@ AC_CONFIG_FILES(Makefile extra/Makefile mysys/Makefile dnl
  include/mysql_version.h plugin/Makefile win/Makefile)
 
 AC_CONFIG_COMMANDS([default], , test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h)
+AC_CONFIG_COMMANDS([my_config.h], cp include/config.h include/my_config.h)
 
 # Ensure that table handlers gets all modifications to CFLAGS/CXXFLAGS
 AC_CONFIG_COMMANDS_POST(ac_configure_args="$ac_configure_args CFLAGS='$CFLAGS' CXXFLAGS='$CXXFLAGS'")
