Bug#29248 - MyISAMchk & MyISAMpack failing with * wildcard on Windows platform - Link against setargv.obj for wild-card expansion. --BZR-- revision-id: ignacio.galarza@sun.com-20090331214845-h9ed9yfkh003nl7l property-branch-nick: mysql-5.0-bugteam_29248 testament3-sha1: 05bc56c36b6006500c0f5ca10bc1dfd0ee936c3e

--- a/myisam/CMakeLists.txt
+++ b/myisam/CMakeLists.txt
@@ -41,6 +41,8 @@ TARGET_LINK_LIBRARIES(myisamlog myisam mysys debug dbug strings zlib wsock32)
 ADD_EXECUTABLE(myisampack myisampack.c)
 TARGET_LINK_LIBRARIES(myisampack myisam mysys debug dbug strings zlib wsock32)
 
+SET_TARGET_PROPERTIES(myisamchk myisampack PROPERTIES LINK_FLAGS "setargv.obj")
+
 IF(EMBED_MANIFESTS)
   MYSQL_EMBED_MANIFEST("myisam_ftdump" "asInvoker")
   MYSQL_EMBED_MANIFEST("myisamchk" "asInvoker")
