Adding DTrace test scripts to distribution targets
--BZR--
revision-id: mc.brown@sun.com-20090416170632-e4ylvj0zdhfmvff0
property-branch-nick: 5.1-pv
testament3-sha1: de06dd3c0aa5f11170430ae92ea9bc5a7b6e3a9f

--- a/support-files/Makefile.am
+++ b/support-files/Makefile.am
@@ -33,7 +33,8 @@ EXTRA_DIST =		mysql.spec.sh \
 			magic mysql.m4 \
 			MySQL-shared-compat.spec.sh \
 			ndb-config-2-node.ini.sh \
-			compiler_warnings.supp
+			compiler_warnings.supp \ 
+			dtrace
 
 SUBDIRS =		MacOSX RHEL4-SElinux
 
