branches/zip: minor changes to CMakeLists.txt
All are non-functional changes:
- should check for long (not int), spotted by Sunny
- comment out the project definition, avoiding to generate another
  .sln file.
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:4733
testament3-sha1: ecad6f27e451892620e758fa4fae1ff0f98dfab1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@
 # property will not be set
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
 
-PROJECT (INNODB_PLUGIN)
+# When PROJECT is defined, a separate .sln file will be generated.
+# PROJECT (INNODB_PLUGIN)
 
 MESSAGE(STATUS "Enter InnoDB ...")
 MESSAGE(STATUS "INNODB_DYNAMIC_PLUGIN: " ${INNODB_DYNAMIC_PLUGIN})
@@ -44,8 +45,9 @@ MESSAGE(STATUS "MSVC: " ${MSVC})
 # Check type sizes
 include(CheckTypeSize)
 
+# Currently, the checked results are not used.
 CHECK_TYPE_SIZE(int SIZEOF_INT)
-CHECK_TYPE_SIZE(int SIZEOF_LONG)
+CHECK_TYPE_SIZE(long SIZEOF_LONG)
 CHECK_TYPE_SIZE(void* SIZEOF_VOID_P)
 
 # Include directories under innobase
