--- a/configure.in
+++ b/configure.in
@@ -661,7 +661,6 @@ then
   fi
 fi
 
-
 AC_ARG_WITH(server-suffix,
     [  --with-server-suffix    Append value to the version string.],
     [ MYSQL_SERVER_SUFFIX=`echo "$withval" | sed -e  's/^\(...................................\)..*$/\1/'` ],
@@ -724,17 +723,42 @@ else
   AC_MSG_RESULT([no])
 fi
 
+AC_MSG_CHECKING(whether features provided by the user community should be included.)
+AC_ARG_ENABLE(community-features,
+    AC_HELP_STRING(
+        [--enable-community-features], 
+        [Enable additional features provided by the user community.]),
+    [ ENABLE_COMMUNITY_FEATURES=$enableval ],
+    [ ENABLE_COMMUNITY_FEATURES=no ]
+    )
+
+if test "$ENABLE_COMMUNITY_FEATURES" = "yes"
+then
+  AC_DEFINE([COMMUNITY_SERVER], [1],
+            [Whether features provided by the user community should be included])
+  AC_MSG_RESULT([yes])
+else
+  AC_MSG_RESULT([no])
+fi
+
 # Add query profiler
+AC_MSG_CHECKING(whether query profiling should be included)
 AC_ARG_ENABLE(profiling,
-    AS_HELP_STRING([--disable-profiling], [Build a version without query profiling code]),
+    AS_HELP_STRING([--enable-profiling], [Add query-profiling code.]),
     [ ENABLED_PROFILING=$enableval ],
-    [ ENABLED_PROFILING=yes ])
+    [ ENABLED_PROFILING=no ])
 
 if test "$ENABLED_PROFILING" = "yes"
 then
-  AC_DEFINE([ENABLED_PROFILING], [1],
-            [If SHOW PROFILE should be enabled])
-  AC_MSG_RESULT([yes])
+  if test "$ENABLE_COMMUNITY_FEATURES" = "yes";
+  then
+    AC_DEFINE([ENABLED_PROFILING], [1], [If SHOW PROFILE should be enabled])
+    AC_MSG_RESULT([yes])
+  else
+    ENABLED_PROFILING="no"
+    AC_MSG_RESULT([no, overridden because community-features disabled])
+    AC_MSG_ERROR([This is almost certainly wrong.  Add --enable-community-features or remove --enable-profiling .])
+  fi
 else
   AC_MSG_RESULT([no])
 fi
